# FlappyDog

./: .gitignore  .gitmodules  FlappyDog.sln  README.md  README.txt
FlappyDog/: CMakeLists.txt  Defs.h  Dog.cpp  Dog.h  FlappyDog.vcxproj  FlappyDog.vcxproj.filters  Game.cpp  Game.h  GameObject.h  Level.cpp  Pipe.h  ScoreWidget.cpp  ScoreWidget.h
FlappyDog/include/: Dog.h  Game.h  Level.h
FlappyDog/src/: Game.cpp  Pipe.cpp  ScoreWidget.cpp  main.cpp
